...
        self.logoImageView = logoImageView
    }
    
    func configureLoginButton() {
        
        let loginButton = UIButton(type: .system)
        loginButton.accessibilityIdentifier = "Authenticate"
        loginButton.setTitle("Войти", for: .normal)
        loginButton.backgroundColor = .white
        loginButton.tintColor = .ypBlack
        loginButton.titleLabel?.font = UIFont.systemFont(ofSize: 16, weight: .semibold)
        loginButton.layer.cornerRadius = 16
        loginButton.clipsToBounds = true
...
