...
    }
    
    func configureWebView() {
        guard let progressView = progressView else {return}
        
        let webView = WKWebView()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        webView.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(webView)
        
        NSLayoutConstraint.activate([
            webView.leadingAnchor.constraint(equalTo: view.leadingAnchor),
...
